# matrix-bridge-dingtalk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README_CN.md  _todos.md  compose.yml
.github/workflows/: crates-release.yml  docker.yml  release.yml  tests.yml
appservices/: dingtalk-registration.example.yaml
config/: config.example.kdl  config.example.yaml  config.sample.yaml
migrations/: 001_initial.sql  001_initial_sqlite.sql
src/: admin.rs  bridge.rs  cache.rs  cli.rs  config.rs  db.rs  dingtalk.rs  lib.rs  main.rs  matrix.rs  media.rs  parsers.rs  utils.rs  web.rs
src/bridge/: command_handler.rs  dingtalk_bridge.rs  event_processor.rs  matrix_event_parser.rs  matrix_to_dingtalk_dispatcher.rs  message.rs  message_flow.rs  mod.rs  portal.rs  presence_handler.rs  provisioning.rs  puppet.rs  user.rs
src/config/: parser.rs
src/database/: error.rs  mod.rs  models.rs  sqlite_stores.rs  stores.rs
src/db/: error.rs  manager.rs  models.rs  mysql.rs  postgres.rs  schema.rs  schema_sqlite.rs  sqlite.rs  stores.rs
src/dingtalk/: client.rs  mod.rs  service.rs  types.rs
src/formatter/: dingtalk_to_matrix.rs  matrix_to_dingtalk.rs  mod.rs
src/utils/: error.rs  formatting.rs  logging.rs
src/web/: callback.rs  health.rs  metrics.rs  mod.rs  provisioning.rs
temp/data/: matrix-dingtalk.db
tests/: bridge_flows.rs
