[package]
name = "matrix-bridge-dingtalk"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Palpo Team <chris@acroidea.com>"]
description = "A bridge between Matrix and DingTalk written in Rust"
license = "Apache-2.0"
repository = "https://github.com/palpo-im/matrix-bridge-dingtalk"
keywords = ["matrix", "dingtalk", "bridge", "chat"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "matrix-bridge-dingtalk"
path = "src/main.rs"

[features]
default = ["sqlite"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite", "dep:libsqlite3-sys"]
mysql = ["diesel/mysql"]

[dependencies]
salvo = { version = "0.89", default-features = false, features = [
    "server",
    "http1",
    "logging",
    "cors",
    "oapi",
    "affix-state",
] }
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.3.6", default-features = false, features = [
    "sqlite",
    "r2d2",
    "chrono",
    "uuid",
] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
config = "0.15.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-futures = "0.2"
anyhow = "1.0"
thiserror = "2.0.18"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
url = "2.5"
once_cell = "1.20"
parking_lot = "0.12"
metrics = { version = "0.24.3", optional = true }
metrics-exporter-prometheus = { version = "0.18.1", optional = true }
matrix-bot-sdk = { version = "0.2.4", features = ["appservice"] }
secrecy = "0.10.3"
regex = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
urlencoding = "2.1"
lru = "0.16"
dingtalk-sdk = { path = "../dingtalk-sdk" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "=3.25.0"
test-case = "3.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.docker]
inherits = "release"
lto = "thin"
codegen-units = 4

[profile.dev]
debug = true
opt-level = 0
